--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,42 +2,38 @@ name: Deploy to AWS Elastic Beanstalk
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches:
+      - main  # Deploy whenever main branch is updated
 
 jobs:
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 22
+          node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Run build (if available)
-        run: |
-          if (Test-Path package.json) {
-            if ((Get-Content package.json) -match '"build"') { npm run build }
-            else { Write-Output "No build step found." }
-          }
+      - name: Build application
+        run: npm run build --if-present
 
-      - name: Zip application
-        run: powershell Compress-Archive -Path * -DestinationPath app.zip -Force
+      - name: Generate deployment package
+        run: zip -r app.zip . -x "*.git*"
 
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: ${{ secrets.EB_APPLICATION_NAME }}
+          environment_name: ${{ secrets.EB_ENVIRONMENT_NAME }}
+          version_label: ${{ github.run_number }}
           region: ${{ secrets.AWS_REGION }}
-          application_name: ${{ secrets.AWS_APP_NAME }}
-          environment_name: ${{ secrets.AWS_ENV_NAME }}
-          version_label: v${{ github.run_number }}
           deployment_package: app.zip
