--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "scripts": {
     "start": "node run.js",
     "build": "echo 'No build step needed'",
-    "lint": "eslint . || true",
+    "lint": "eslint .",
     "test": "echo \"no tests\" && exit 0"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "express": "^5.1.0",
     "request": "^2.88.2"
   },
   "repository": {
@@ -30,6 +31,9 @@
   "homepage": "https://github.com/PKUPI/heavens-above#readme",
   "engines": {
     "node": ">=12.10.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.38.0",
+    "eslint": "^9.38.0"
   }
 }
-
