--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,15 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "daily"         
+      time: "05:00"            
     open-pull-requests-limit: 5
-    ignore:
-      - dependency-name: "some-package-to-ignore"
-        versions:
-          - ">=1.0.0"
+    commit-message:
+      prefix: "chore(deps)"
+    labels:
+      - dependencies
+      - automated
+    reviewers:
+      - NoorAlam27498        
+
+
