--- a/.github/workflows/scheduled-tasks.yml
+++ b/.github/workflows/scheduled-tasks.yml
@@ -1,39 +1,46 @@
-name: Scheduled Scrape & Commit
+name: Scheduled Tasks (Daily Maintenance)
 
 on:
   schedule:
-    - cron: '0 2 * * *'   # daily at 02:00 UTC (adjust if needed)
-  workflow_dispatch:
+    # Runs every day at 02:00 UTC
+    - cron: "0 2 * * *"
+  workflow_dispatch: # Allow manual trigger from GitHub Actions tab
+    inputs:
+      reason:
+        description: "Manual run reason"
+        required: false
 
 jobs:
-  scrape:
+  run-maintenance:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          persist-credentials: true
 
-      - name: Use Node
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: "20"
+          cache: "npm"
 
-      - name: Install
+      - name: Install dependencies
         run: npm ci
 
-      - name: Run scraper
+      - name: Run scheduled task (run.js)
         run: node run.js
 
-      - name: Commit generated public/ output if changed
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add public || true
-          if git diff --cached --quiet; then
-            echo "No changes to commit"
-          else
-            git commit -m "chore: update scraped data [ci skip]" || true
-            git push origin HEAD:main
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload generated data
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: iss-data
+          path: public/data/satellite25544/
+
+      - name: Notify success
+        if: success()
+        run: echo "✅ Scheduled task completed successfully."
+
+      - name: Notify failure
+        if: failure()
+        run: echo "❌ Scheduled task failed. Check logs in GitHub Actions."
